--- a/libraries/server/trending/build.gradle
+++ b/libraries/server/trending/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.chesire.lintrules:lint-gradle:$lintrules_version"
     implementation "com.chesire.lintrules:lint-xml:$lintrules_version"
+    implementation "com.michael-bull.kotlin-result:kotlin-result:$kotlinresult_version"
 }
