--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ ext {
     liveevent_version = "1.2.0"
     material_version = "1.3.0-beta01"
     materialdialog_version = "3.3.0"
+    kotlinresult_version = "1.1.9"
     moshi_version = "1.11.0"
     preferences_version = "1.1.1"
     retrofit_version = "2.9.0"
