feat: add start of the activity api
Add the starting parts for the activity api, this interacts with the library-events from the Kitsu
api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,12 +66,14 @@ dependencies {
     implementation project(":libraries:database")
     implementation project(":libraries:encryption")
     implementation project(":libraries:kitsu")
+    implementation project(":libraries:kitsu:activity")
     implementation project(":libraries:kitsu:auth")
     implementation project(":libraries:kitsu:library")
     implementation project(":libraries:kitsu:search")
     implementation project(":libraries:kitsu:trending")
     implementation project(":libraries:kitsu:user")
     implementation project(":libraries:library")
+    //implementation project(":libraries:server:activity")
     implementation project(":libraries:server:auth")
     implementation project(":libraries:server:library")
     implementation project(":libraries:server:search")
