--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ include ':app',
     ':libraries:database',
     ':libraries:encryption',
     ':libraries:kitsu',
+    ':libraries:kitsu:activity',
     ':libraries:kitsu:auth',
     ':libraries:kitsu:library',
     ':libraries:kitsu:search',
