feat: create an interface for the activity events
Create new activity module which hosts the domain and interface to use the activity

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,9 +15,10 @@ include ':app',
     ':libraries:kitsu:auth',
     ':libraries:kitsu:library',
     ':libraries:kitsu:search',
-    ':libraries:kitsu:user',
     ':libraries:kitsu:trending',
+    ':libraries:kitsu:user',
     ':libraries:library',
+    ':libraries:server:activity',
     ':libraries:server:auth',
     ':libraries:server:library',
     ':libraries:server:search',
