refactor: create new datasource module
Create a new Datasource module that will host the various data sources. For now move the activity
into there instead of server, in the future more will be moved across to this so that the api and
the local data sources can be combined into this module

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,8 @@ include ':app',
     ':libraries:account',
     ':libraries:core',
     ':libraries:database',
+    ':libraries:datasource',
+    ':libraries:datasource:activity',
     ':libraries:encryption',
     ':libraries:kitsu',
     ':libraries:kitsu:activity',
@@ -18,7 +20,6 @@ include ':app',
     ':libraries:kitsu:trending',
     ':libraries:kitsu:user',
     ':libraries:library',
-    ':libraries:server:activity',
     ':libraries:server:auth',
     ':libraries:server:library',
     ':libraries:server:search',
