--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation project(":libraries:account")
     implementation project(":libraries:core")
     implementation project(":libraries:database")
+    implementation project(":libraries:datasource:activity")
     implementation project(":libraries:encryption")
     implementation project(":libraries:kitsu")
     implementation project(":libraries:kitsu:activity")
@@ -73,7 +74,6 @@ dependencies {
     implementation project(":libraries:kitsu:trending")
     implementation project(":libraries:kitsu:user")
     implementation project(":libraries:library")
-    implementation project(":libraries:server:activity")
     implementation project(":libraries:server:auth")
     implementation project(":libraries:server:library")
     implementation project(":libraries:server:search")
