--- a/features/timeline/build.gradle
+++ b/features/timeline/build.gradle
@@ -30,16 +30,19 @@ android {
 }
 
 dependencies {
+    implementation project(":libraries:datasource:activity")
+
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.core:core-ktx:$corektx_version"
+    implementation "androidx.fragment:fragment-ktx:$fragmentctx_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "com.chesire.lintrules:lint-gradle:$lintrules_version"
     implementation "com.chesire.lintrules:lint-xml:$lintrules_version"
     implementation "com.google.dagger:hilt-android:$hilt_version"
 
     testImplementation "junit:junit:$junit_version"
-
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
-    androidTestImplementation "androidx.test.ext:junit:1.1.2"
 
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 }
